grammar.txt
// A high-level description of the disco language grammar using a syntax based
// on EBNF.
//
// This file is meant to be an easier to look at version of the parser source
// code. It is not guaranteed to be up to date or complete. For the most
// accurate information about the grammar of the language, please see the parser
// source code itself.

module := decl*
decl := impl | function

impl := "impl" ident "for" ident impl_block
impl_block := "{" function* "}"
function := "fn" ident "(" ")" block
block := "{" stmt* "}"

stmt := var_decl
var_decl := "let" ident ":" ty "=" expr ";"

expr := factor | factor ("+" | "-") factor
factor := integer_literal

whitespace := " \t\r\n" | comment
comment := "//" any* "\n"
